
if (GPU)
        add_subdirectory("simple_engine")
        add_subdirectory("funny_tex")
        add_subdirectory("pbr_demo")
        if(PHYSICS)
                add_subdirectory("physics_demo")
        endif()
        if(AUDIO)
                add_subdirectory("audio_demo")
                add_subdirectory("sound_demo")
        endif()
        add_subdirectory("anim_demo")
endif()

if(UI)
        add_subdirectory("ui_demo")
endif()

add_subdirectory("offscreen_rendering")
